# SDL-Test

./: .gitignore  CMakeLists.txt  MakeFile  README.md  main.cpp
src/core/: Game.cpp  Game.h
